# LudoLingo

./: .gitignore  CHANGELOG.md  README.md  ludolingo-deepseek-r1-14b.modelfile  ludolingo-deepseek14b.modelfile  ludolingo-light.modelfile  ludolingo-qwen14b.modelfile  ludolingo.modelfile  nuxt.config.ts  package.json  pnpm-lock.yaml  progress.md  test_cases.txt  test_real_games.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 001_initial_schema.sql  002_fix_migration.sql
src-tauri/src/: integration_test.rs  lib.rs  migrations.rs
src-tauri/src/commands/: injection.rs  mod.rs  projects.rs  scanning.rs  translation.rs  updater.rs  validation.rs
src-tauri/src/core/: error.rs  mod.rs
src-tauri/src/models/: mod.rs  project.rs
src-tauri/src/parsers/: engine.rs  factory.rs  handler.rs  mod.rs
src-tauri/src/parsers/rpg_maker/: engine.rs  handler.rs  mod.rs  text_validation.rs  validation.rs
src-tauri/src/parsers/rpg_maker/files/: actors.rs  armors.rs  classes.rs  common.rs  (+12 more)
src-tauri/src/parsers/text/: mod.rs  universal_formatter.rs  validation.rs  wolf_rpg_formatter.rs
src-tauri/src/parsers/wolfrpg/: engine.rs  handler.rs  mod.rs  text_validation.rs  validation.rs
src-tauri/src/translation/: glossary.rs  mod.rs  provider.rs  service.rs
src-tauri/src/translation/common/: functions.rs  mod.rs  types.rs
src-tauri/src/translation/ollama/: client.rs  common.rs  mod.rs  sequential.rs  single.rs
src-tauri/src/translation/runpod/: client.rs  common.rs  mod.rs  sequential.rs  single.rs
(+201 files in other folders)
